--- a/404.html
+++ b/404.html
@@ -25,14 +25,15 @@
         <div class="mil-top-position mil-fixed">
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
-                <div class="container-fluid">
-                    <a href="home-1.html" class="mil-logo" style="width: 140px"></a>
+                <div class="container">
+                    <a href="index.html" class="mil-logo" style="width: 140px"></a>
                     <div class="mil-navigation">
                         <nav>
                             <ul>
-                                <li class="mil-has-children">
-                                    <a href="#.">Enterprise</a>
-                                    <ul>
+                                <li>
+                                    <a href="index.html">Home</a>
+                                    <!-- <ul>
+                                        <li><a href="home-2.html">Home V2</a></li>
                                         <li><a href="about.html">About us</a></li>
                                         <li><a href="team.html">Team</a></li>
                                         <li><a href="team-single.html">Team Member</a></li>
@@ -40,18 +41,25 @@
                                         <li><a href="prices.html">Prices</a></li>
                                         <li><a href="faq.html">FAQ</a></li>
                                         <li><a href="event.html">Event</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
-                                <li><a href="portfolio.html">Case Studies</a></li>
-                                <li class="mil-has-children">
-                                    <a href="#.">Services</a>
-                                    <ul>
+
+                                <li><a href="about.html">About us</a></li>
+
+                                <li>
+                                    <a href="service-1.html">Services</a>
+                                    <!-- <ul>
                                         <li><a href="service-1.html">Service 1</a></li>
                                         <li><a href="service-2.html">Service 2</a></li>
                                         <li><a href="service-3.html">Service 3</a></li>
                                         <li><a href="service-4.html">Service 4</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
+
+                                <li><a href="portfolio.html">Portfolio</a></li>
+
+                               
+<!-- 
                                 <li class="mil-has-children">
                                     <a href="#.">Solutions</a>
                                     <ul>
@@ -59,16 +67,23 @@
                                         <li><a href="solution-2.html">Solution 2</a></li>
                                         <li><a href="solution-3.html">Solution 3</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
+
+
                                 <li><a href="blog.html">Blog</a></li>
+
+                                <li><a href="careers.html">Careers</a></li>
+
                                 <li><a href="contact.html">Contact Us</a></li>
+<!-- 
                                 <li class="mil-has-children">
                                     <a href="#.">Other</a>
                                     <ul>
                                         <li><a href="coming-soon.html">Coming Soon</a></li>
                                         <li><a href="404.html">404</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
+
                             </ul>
                             <div class="mil-search-icon">
                                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
