--- a/careers.html
+++ b/careers.html
@@ -610,15 +610,13 @@
 
                 <div class="mil-footer-links">
                     <ul class="mil-social mil-light">
-                        <li class="mil-adapt-links"><a href="#.">Facebook</a><a href="#.">FB</a></li>
-                        <li class="mil-adapt-links"><a href="#.">Instagram</a><a href="#.">IG</a></li>
-                        <li class="mil-adapt-links"><a href="#.">LinkedIn</a><a href="#.">IN</a></li>
-                        <li class="mil-adapt-links"><a href="#.">Twitter</a><a href="#.">TW</a></li>
-                        <li class="mil-adapt-links"><a href="#.">YouTube</a><a href="#.">YT</a></li>
+                        <li class="mil-adapt-links"><a href="https://www.facebook.com/navipromotions.in">Facebook</a><a href="https://www.facebook.com/navipromotions.in">FB</a></li>
+                        <li class="mil-adapt-links"><a href="https://www.instagram.com/navipromotions.in">Instagram</a><a href="https://www.instagram.com/navipromotions.in">IG</a></li>
+                        <li class="mil-adapt-links"><a href=" https://www.linkedin.com/company/navipromotions">LinkedIn</a><a href=" https://www.linkedin.com/company/navipromotions">IN</a></li>
                     </ul>
                     <ul class="mil-additional-links mil-light">
-                        <li><a href="#.">Terms & Condition</a></li>
-                        <li><a href="#.">Privacy Policy</a></li>
+                        <li><a href="terms-condition.html">Terms & Condition</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
                         <!-- <li><a href="#.">Sitemap</a></li> -->
                     </ul>
                 </div>
