all pages content are changed

--- a/blog.html
+++ b/blog.html
@@ -126,73 +126,73 @@
                 <div class="row justify-content-between">
                     <div class="col-lg-8 col-xl-8 mil-mb-120">
 
-                        <a href="publication.html" class="mil-card mil-mb-60">
+                        <a href="blog1.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
                                 <img src="img/blog/1.jpg" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
                                     <ul class="mil-dot-list mil-text-sm mil-mb-15">
-                                        <li>Management</li>
-                                        <li>29 Oct. 2023</li>
+                                        <li>Branding</li>
+                                        <li>12 Feb. 2024</li>
                                     </ul>
-                                    <h4>Easy & Most Powerful Server Platform.</h4>
+                                    <h4>How Branding Elevates Your Business Growth</h4>
                                 </div>
                                 <div class="mil-card-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempor incididunt dolor sit amet, consectetur adipisicing.</p>
+                                    <p>Discover how effective branding strategies can boost your business visibility, create trust, and leave a lasting impact on your audience.</p>
                                 </div>
                             </div>
                         </a>
 
-                        <a href="publication.html" class="mil-card mil-mb-60">
+                       <a href="blog2.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
                                 <img src="img/blog/2.jpg" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
                                     <ul class="mil-dot-list mil-text-sm mil-mb-15">
-                                        <li>Management</li>
-                                        <li>29 Oct. 2023</li>
+                                        <li>Social Media Marketing</li>
+                                        <li>18 Feb. 2024</li>
                                     </ul>
-                                    <h4>Easy & Most Powerful Server Platform.</h4>
+                                    <h4>Maximizing Engagement with Social Media Strategies</h4>
                                 </div>
                                 <div class="mil-card-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempor incididunt dolor sit amet, consectetur adipisicing.</p>
+                                    <p>Learn how to leverage social media to reach the right audience, increase engagement, and drive conversions effectively.</p>
                                 </div>
                             </div>
                         </a>
 
-                        <a href="publication.html" class="mil-card mil-mb-60">
+                        <a href="blog3.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
                                 <img src="img/blog/3.jpg" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
                                     <ul class="mil-dot-list mil-text-sm mil-mb-15">
-                                        <li>Management</li>
-                                        <li>29 Oct. 2023</li>
+                                        <li>Advertising</li>
+                                        <li>25 Feb. 2024</li>
                                     </ul>
-                                    <h4>Easy & Most Powerful Server Platform.</h4>
+                                    <h4>The Power of Outdoor Advertising in Local Markets</h4>
                                 </div>
                                 <div class="mil-card-text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempor incididunt dolor sit amet, consectetur adipisicing.</p>
+                                    <p>Explore why billboards, hoardings, and other outdoor advertising methods still hold a strong impact in the digital era.</p>
                                 </div>
                             </div>
                         </a>
-
+                        
                         <div class="mil-divider mil-mb-60"></div>
 
                         <div class="mil-pagination mil-hidden-arrows">
                             <div class="mil-slider-nav">
-                                <div class="mil-slider-btn-prev mil-blog-prev"><i class="fas fa-arrow-left"></i><span class="mil-h6">Prev</span></div>
+                                <div class="mil-slider-btn-prev mil-blog-prev"><i class="fas fa-arrow-left"></i><span class="mil-h6"><a href="blog.html">Prev</a></span></div>
                             </div>
                             <ul class="mil-pagination-numbers">
-                                <li class="mil-active"><a href="#.">1</a></li>
-                                <li><a href="#.">2</a></li>
-                                <li><a href="#.">3</a></li>
+                                <li class="mil-active"><a href="blog.html">1</a></li>
+                                <li><a href="blog-sec.html">2</a></li>
+                                <!-- <li><a href="#.">3</a></li> -->
                             </ul>
                             <div class="mil-slider-nav">
-                                <div class="mil-slider-btn-next mil-blog-next"><span class="mil-h6">Next</span><i class="fas fa-arrow-right"></i></div>
+                                <div class="mil-slider-btn-next mil-blog-next"><span class="mil-h6"><a href="blog-sec.html">Next</a></span><i class="fas fa-arrow-right"></i></div>
                             </div>
                         </div>
 
@@ -200,13 +200,13 @@
                     <div class="col-lg-4 col-xl-3 mil-mb-120">
 
                         <div class="mil-mb-60">
-                            <h5 class="mil-list-title mil-mb-30">About ITSulu</h5>
-                            <p class="mil-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+                            <h5 class="mil-list-title mil-mb-30">About Navi Promotions</h5>
+                            <p class="mil-mb-30">Navi Promotions is a dynamic marketing agency specializing in digital marketing, outdoor advertising, event promotions, and branding solutions. We help businesses enhance their visibility and connect with their target audience effectively.</p>
                             <a href="team-single.html" class="mil-post-sm mil-mb-15">
                                 <div class="mil-cover-frame"><img src="img/faces/1.jpg" alt="cover"></div>
                                 <div class="mil-description">
-                                    <h4 class="mil-font-3 mil-accent">Jane Meldrum</h4>
-                                    <p class="mil-text-sm">CEO & Co-Founder</p>
+                                    <h4 class="mil-font-3 mil-accent">Naga Vishnu</h4>
+                                    <p class="mil-text-sm">CEO & Founder</p>
                                 </div>
                             </a>
                         </div>
@@ -215,34 +215,6 @@
                             <input type="text" class="mil-sidebar-input" placeholder="Search here...">
                             <button type="submit"><i class="fas fa-search"></i></button>
                         </form>
-                        <div class="mil-divider mil-mb-60"></div>
-                        <div class="mil-mb-60">
-                            <h5 class="mil-list-title mil-mb-30">Recent Posts</h5>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/6.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>The World’s Fastest 2 Qubit Qate</h6>
-                                </div>
-                            </a>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/5.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>Build Your Money Machine, Take Control</h6>
-                                </div>
-                            </a>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/4.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>Android App For Shaving Products Drive</h6>
-                                </div>
-                            </a>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/3.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>Positioning Your Self As a Pro Consultant</h6>
-                                </div>
-                            </a>
-                        </div>
                         <div class="mil-divider mil-mb-60"></div>
                         <div class="mil-mb-60">
                             <h5 class="mil-list-title mil-mb-30">Categories</h5>
@@ -285,7 +257,7 @@
                         </div>
                         <div class="mil-divider mil-mb-60"></div>
                         <h5 class="mil-list-title mil-mb-30">Contact us</h5>
-                        <p class="mil-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                        <p class="mil-mb-30">Have a project in mind? Reach out to Navi Promotions for expert marketing strategies tailored to your business needs. Let’s elevate your brand together!</p>
                         <a href="contact.html" class="mil-link"><span>Send</span><i class="fas fa-arrow-right"></i></a>
 
                     </div>
