--- a/careers.html
+++ b/careers.html
@@ -410,7 +410,7 @@
                     <div class="col-md-6 col-xl-6">
 
 
-                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Our Latest News</span>
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Blogs</span>
                         <h2>Latest Thinking</h2>
 
                     </div>
@@ -435,11 +435,11 @@
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
+                                        <h4 class="mil-mb-20">How Branding Elevates Your Business Growth</h4>
                                         <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Discover how effective branding strategies can boost your business visibility, create trust, and leave a lasting impact on your audience.</p>
                                     </div>
                                 </div>
                             </a>
@@ -450,11 +450,11 @@
                             <a href="publication.html" class="mil-card mil-card-sm mil-reverse-sm">
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
+                                        <h4 class="mil-mb-20">Maximizing Engagement with Social Media Strategies</h4>
                                         <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Learn how to leverage social media to reach the right audience, increase engagement, and drive conversions effectively.</p>
                                     </div>
                                 </div>
                                 <div class="mil-cover-frame">
@@ -471,11 +471,11 @@
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
+                                        <h4 class="mil-mb-20">The Power of Outdoor Advertising in Local Markets</h4>
                                         <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Explore why billboards, hoardings, and other outdoor advertising methods still hold a strong impact in the digital era.</p>
                                     </div>
                                 </div>
                             </a>
@@ -490,11 +490,11 @@
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
+                                        <h4 class="mil-mb-20">Why Every Business Needs Digital Marketing</h4>
                                         <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Understand the key components of digital marketing and how they help businesses stay ahead in today's competitive landscape.</p>
                                     </div>
                                 </div>
                             </a>
@@ -505,11 +505,11 @@
                             <a href="publication.html" class="mil-card mil-card-sm mil-reverse-sm">
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
+                                        <h4 class="mil-mb-20">Creating Buzz: The Art of Event Promotion</h4>
                                         <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>From planning to execution, discover how the right promotional strategies can ensure maximum turnout and engagement for your event.</p>
                                     </div>
                                 </div>
                                 <div class="mil-cover-frame">
@@ -527,11 +527,11 @@
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
+                                        <h4 class="mil-mb-20">SEO and Content: The Ultimate Growth Formula</h4>
                                         <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Discover how high-quality content and SEO strategies work together to improve online visibility and drive organic traffic.</p>
                                     </div>
                                 </div>
                             </a>
