--- a/blog1.html
+++ b/blog1.html
@@ -32,42 +32,17 @@
                             <ul>
                                 <li>
                                     <a href="index.html">Home</a>
-                                    <!-- <ul>
-                                        <li><a href="home-2.html">Home V2</a></li>
-                                        <li><a href="about.html">About us</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <li><a href="team-single.html">Team Member</a></li>
-                                        <li><a href="careers.html">Careers</a></li>
-                                        <li><a href="prices.html">Prices</a></li>
-                                        <li><a href="faq.html">FAQ</a></li>
-                                        <li><a href="event.html">Event</a></li>
-                                    </ul> -->
+
                                 </li>
 
                                 <li><a href="about.html">About us</a></li>
 
                                 <li>
                                     <a href="service-1.html">Services</a>
-                                    <!-- <ul>
-                                        <li><a href="service-1.html">Service 1</a></li>
-                                        <li><a href="service-2.html">Service 2</a></li>
-                                        <li><a href="service-3.html">Service 3</a></li>
-                                        <li><a href="service-4.html">Service 4</a></li>
-                                    </ul> -->
+
                                 </li>
 
                                 <li><a href="portfolio.html">Portfolio</a></li>
-
-                               
-<!-- 
-                                <li class="mil-has-children">
-                                    <a href="#.">Solutions</a>
-                                    <ul>
-                                        <li><a href="solution-1.html">Solution 1</a></li>
-                                        <li><a href="solution-2.html">Solution 2</a></li>
-                                        <li><a href="solution-3.html">Solution 3</a></li>
-                                    </ul>
-                                </li> -->
 
 
                                 <li><a href="blog.html">Blog</a></li>
@@ -75,14 +50,8 @@
                                 <li><a href="careers.html">Careers</a></li>
 
                                 <li><a href="contact.html">Contact Us</a></li>
-<!-- 
-                                <li class="mil-has-children">
-                                    <a href="#.">Other</a>
-                                    <ul>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-                                        <li><a href="404.html">404</a></li>
-                                    </ul>
-                                </li> -->
+
+                                </li> 
 
                             </ul>
                             <div class="mil-search-icon">
@@ -168,13 +137,13 @@
                     <div class="col-lg-4 col-xl-3 mil-mb-120">
 
                         <div class="mil-mb-60">
-                            <h5 class="mil-list-title mil-mb-30">About ITSulu</h5>
-                            <p class="mil-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+                            <h5 class="mil-list-title mil-mb-30">About Navi Promotions</h5>
+                            <p class="mil-mb-30">Navi Promotions is a dynamic marketing agency specializing in digital marketing, outdoor advertising, event promotions, and branding solutions. We help businesses enhance their visibility and connect with their target audience effectively.</p>
                             <a href="team-single.html" class="mil-post-sm mil-mb-15">
                                 <div class="mil-cover-frame"><img src="img/faces/1.jpg" alt="cover"></div>
                                 <div class="mil-description">
-                                    <h4 class="mil-font-3 mil-accent">Jane Meldrum</h4>
-                                    <p class="mil-text-sm">CEO & Co-Founder</p>
+                                    <h4 class="mil-font-3 mil-accent">Naga Vishnu</h4>
+                                    <p class="mil-text-sm">CEO & Founder</p>
                                 </div>
                             </a>
                         </div>
@@ -184,34 +153,6 @@
                             <button type="submit"><i class="fas fa-search"></i></button>
                         </form>
                         <div class="mil-divider mil-mb-60"></div>
-                        <!-- <div class="mil-mb-60">
-                            <h5 class="mil-list-title mil-mb-30">Recent Posts</h5>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/6.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>The World’s Fastest 2 Qubit Qate</h6>
-                                </div>
-                            </a>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/5.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>Build Your Money Machine, Take Control</h6>
-                                </div>
-                            </a>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/4.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>Android App For Shaving Products Drive</h6>
-                                </div>
-                            </a>
-                            <a href="publication.html" class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/blog/3.jpg" alt="cover"></div>
-                                <div class="mil-description">
-                                    <h6>Positioning Your Self As a Pro Consultant</h6>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="mil-divider mil-mb-60"></div> -->
                         <div class="mil-mb-60">
                             <h5 class="mil-list-title mil-mb-30">Categories</h5>
                             <ul class="mil-hover-link-list">
@@ -253,8 +194,8 @@
                         </div>
                         <div class="mil-divider mil-mb-60"></div>
                         <h5 class="mil-list-title mil-mb-30">Contact us</h5>
-                        <p class="mil-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-                        <a href="contact.html" class="mil-link mil-link-sm"><span>Send</span><i class="fas fa-arrow-right"></i></a>
+                        <p class="mil-mb-30">Have a project in mind? Reach out to Navi Promotions for expert marketing strategies tailored to your business needs. Let’s elevate your brand together!</p>
+                        <a href="contact.html" class="mil-link"><span>Send</span><i class="fas fa-arrow-right"></i></a>
 
                     </div>
                 </div>
@@ -273,22 +214,6 @@
                             <img src="img/logo/logo-light.png" alt="" class="mil-logo mil-mb-30" style="width: 140px">
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
-
-                            <!-- <a href="#." class="mil-app-btn mil-mb-5">
-                                <i class="fab fa-google-play"></i>
-                                <div class="mil-app-text">
-                                    <span class="mil-accent mil-text-sm">Available on the</span>
-                                    <div class="mil-h6">Google Play</div>
-                                </div>
-                            </a>
-
-                            <a href="#." class="mil-app-btn">
-                                <i class="fab fa-apple"></i>
-                                <div class="mil-app-text">
-                                    <span class="mil-accent mil-text-sm">Download on the</span>
-                                    <div class="mil-h6">App Store</div>
-                                </div>
-                            </a> -->
 
                         </div>
                         <div class="col-xl-7">
