complete project pages

--- a/careers.html
+++ b/careers.html
@@ -132,6 +132,7 @@
                     </div>
                 </div>
                 <ul class="mil-vacancies-frame">
+
                     <li class="mil-vacancy">
                         <div class="row">
                             <div class="col-md-6 col-lg-4 col-xl-4 mil-mb-30">
@@ -139,10 +140,10 @@
                                     <span class="mil-badge">Full Time</span>
                                     <span class="mil-text-sm mil-dark">Theni</span>
                                 </div>
-                                <h4>Digital Marketing Specialist</h4>
+                                <h4>Video Editor</h4>
                             </div>
                             <div class="col-md-6 col-lg-4 col-xl-4 mil-mb-30">
-                                <p>Develop and implement effective digital marketing strategies across various platforms to drive online traffic and engagement.</p>
+                                <p>Edit and produce high-quality video content, ensuring engaging visuals and seamless transitions to enhance brand storytelling.</p>
                             </div>
                             <div class="col-md-12 col-lg-4 col-xl-4 mil-mb-30">
                                 <div class="mil-adaptive-right">
@@ -159,10 +160,10 @@
                                     <span class="mil-badge">Full Time</span>
                                     <span class="mil-text-sm mil-dark">Theni</span>
                                 </div>
-                                <h4>Social Media Manager</h4>
+                                <h4>Associate Manager</h4>
                             </div>
                             <div class="col-md-6 col-lg-4 col-xl-4 mil-mb-30">
-                                <p>Manage and grow our clients' social media presence by creating compelling content and engaging with the online community.</p>
+                                <p>Oversee daily operations, coordinate with teams, and ensure project execution aligns with company goals and client expectations.</p>
                             </div>
                             <div class="col-md-12 col-lg-4 col-xl-4 mil-mb-30">
                                 <div class="mil-adaptive-right">
@@ -173,7 +174,7 @@
                     </li>
 
 
-                    <li class="mil-vacancy">
+                    <!-- <li class="mil-vacancy">
                         <div class="row">
                             <div class="col-md-6 col-lg-4 col-xl-4 mil-mb-30">
                                 <div class="mil-vacancy-head mil-mb-15">
@@ -231,7 +232,7 @@
                                 </div>
                             </div>
                         </div>
-                    </li>
+                    </li> -->
 
 
                 </ul>
@@ -398,9 +399,9 @@
         </div> -->
         <!-- partners end -->
 
-        <div class="container">
+        <!-- <div class="container">
             <div class="mil-divider"></div>
-        </div>
+        </div> -->
 
         <!-- blog -->
         <section class="mil-blog mil-p-120-120">
