--- a/portfolio.html
+++ b/portfolio.html
@@ -111,9 +111,9 @@
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
                         <li><a href="home-1.html">Home</a></li>
-                        <li><a href="portfolio.html">Works</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Case Studies</h2>
+                    <h2 class="mil-uppercase">Web Application for Pixel CCTV</h2>
                 </div>
             </div>
         </div>
@@ -122,6 +122,7 @@
         <!-- portfolio -->
         <section class="mil-p-120-120">
             <div class="container">
+
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
 
@@ -132,14 +133,15 @@
                     </div>
                     <div class="col-xl-5 mil-mb-60">
 
-                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">The majority have suffered alteration in some form.</span>
-                        <h3 class="mil-mb-30">Android App For Shaving Products Delivery</h3>
-                        <a href="project.html" class="mil-button-with-label">
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Enhancing security through advanced surveillance solutions.</span>
+                        <h3 class="mil-mb-30">Web Application for Pixel CCTV</h3>
+                        <a href="project1.html" class="mil-button-with-label">
                             <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
                         </a>
 
                     </div>
                 </div>
+
                 <div class="row flex-sm-row-reverse justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
 
@@ -150,14 +152,15 @@
                     </div>
                     <div class="col-xl-5 mil-mb-60">
 
-                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">The majority have suffered alteration in some form.</span>
-                        <h3 class="mil-mb-30">Android App For Shaving Products Delivery</h3>
-                        <a href="project.html" class="mil-button-with-label">
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Innovative solutions for fiberglass engineering.</span>
+                        <h3 class="mil-mb-30">Web Application for Xenex Fiberglass Engineering</h3>
+                        <a href="project2.html" class="mil-button-with-label">
                             <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
                         </a>
 
                     </div>
                 </div>
+
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
 
@@ -168,17 +171,18 @@
                     </div>
                     <div class="col-xl-5 mil-mb-60">
 
-                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">The majority have suffered alteration in some form.</span>
-                        <h3 class="mil-mb-30">Android App For Shaving Products Delivery</h3>
-                        <a href="project.html" class="mil-button-with-label">
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Bringing literature to the digital marketplace.</span>
+                        <h3 class="mil-mb-30">Web Application for Tamilsangu Publications</h3>
+                        <a href="project3.html" class="mil-button-with-label">
                             <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
                         </a>
 
                     </div>
                 </div>
-                <div class="mil-divider mil-mb-60"></div>
+                
+                <!-- <div class="mil-divider mil-mb-60"></div> -->
 
-                <div class="mil-pagination mil-hidden-arrows">
+                <!-- <div class="mil-pagination mil-hidden-arrows">
                     <div class="mil-slider-nav">
                         <div class="mil-slider-btn-prev mil-blog-prev"><i class="fas fa-arrow-left"></i><span class="mil-h6">Prev</span></div>
                     </div>
@@ -190,7 +194,7 @@
                     <div class="mil-slider-nav">
                         <div class="mil-slider-btn-next mil-blog-next"><span class="mil-h6">Next</span><i class="fas fa-arrow-right"></i></div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- portfolio end -->
