--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
             <div class="swiper-container mil-banner-slideshow">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="img/photo/1.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="img/images/home1.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                     <div class="swiper-slide">
-                        <img src="img/photo/2.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="img/images/home2.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                     <div class="swiper-slide">
-                        <img src="img/photo/3.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="img/images/home3.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                 </div>
             </div>
@@ -486,15 +486,15 @@
 
                             <a href="project.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/projects/1.jpg" alt="project">
+                                    <img src="img/images/project1.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <h4 class="mil-mb-20">Pixel CCTV</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Enhancing security through advanced surveillance solutions.</p>
                                     </div>
                                 </div>
                             </a>
@@ -504,15 +504,15 @@
 
                             <a href="project.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/projects/2.jpg" alt="project">
+                                    <img src="img/images/project2.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
-                                        <h6>by: <span class="mil-accent">Nguta Ithya</span></h6>
+                                        <h4 class="mil-mb-20">Xenex Fiberglass Engineering</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Nguta Ithya</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Innovative solutions for fiberglass engineering.</p>
                                     </div>
                                 </div>
                             </a>
@@ -522,21 +522,21 @@
 
                             <a href="project.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/projects/3.jpg" alt="project">
+                                    <img src="img/images/project3.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
-                                        <h6>by: <span class="mil-accent">Roy Bricks</span></h6>
+                                        <h4 class="mil-mb-20">Tamilsangu Publication</h4>
+                                        <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Bringing literature to the digital marketplace.</p>
                                     </div>
                                 </div>
                             </a>
 
                         </div>
-                        <div class="swiper-slide">
+                        <!-- <div class="swiper-slide">
 
                             <a href="project.html" class="mil-card">
                                 <div class="mil-cover-frame">
@@ -553,7 +553,7 @@
                                 </div>
                             </a>
 
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="row align-items-center">
@@ -790,7 +790,7 @@
 
                             <a href="publication.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/blog/1.jpg" alt="project">
+                                    <img src="img/images/blog1.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -817,7 +817,7 @@
                                     </div>
                                 </div>
                                 <div class="mil-cover-frame">
-                                    <img src="img/blog/2.jpg" alt="project">
+                                    <img src="img/images/blog2.avif" alt="project">
                                 </div>
                             </a>
 
@@ -826,7 +826,7 @@
 
                             <a href="publication.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
-                                    <img src="img/blog/3.jpg" alt="project">
+                                    <img src="img/images/blog3.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -845,7 +845,7 @@
 
                             <a href="publication.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/blog/4.jpg" alt="project">
+                                    <img src="img/images/blog4.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -872,7 +872,7 @@
                                     </div>
                                 </div>
                                 <div class="mil-cover-frame">
-                                    <img src="img/blog/5.jpg" alt="project">
+                                    <img src="img/images/blog5.avif" alt="project">
                                 </div>
 
                             </a>
@@ -882,7 +882,7 @@
 
                             <a href="publication.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
-                                    <img src="img/blog/6.jpg" alt="project">
+                                    <img src="img/images/blog6.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
