all pages complete

--- a/blog4.html
+++ b/blog4.html
@@ -73,8 +73,8 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm-2 mil-deep-bg">
-            <img src="img/blog/5.jpg" class="mil-background-image" style="object-position: center" alt="Publication cover">
+        <div class="mil-banner-sm-2 mil-deep-bg mil-dark-bg">
+            <img src="img/images/blog4.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
             <div class="mil-overlay"></div>
         </div>
         <!-- banner end -->
@@ -87,11 +87,11 @@
 
                         <span class="mil-suptitle mil-accent mil-mb-30">Digital Marketing</span>
                         <h3 class="mil-up-font mil-mb-30">Why Every Business Needs Digital Marketing</h3>
-                        <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
+                        <!-- <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
                             <li class="mil-post-author"><img src="img/faces/4.jpg" alt="Author"><span>Navin Kumar</span></li>
                             <li>12 Feb. 2024</li>
                             <li>10 min read</li>
-                        </ul>
+                        </ul> -->
                         <div class="mil-divider mil-mb-60"></div>
 
                         <p class="mil-mb-30">In today’s fast-paced digital world, businesses must adapt to stay competitive. Digital marketing has become a crucial component for companies looking to increase brand visibility, drive traffic, and boost sales. Whether you run a small startup or a large enterprise, digital marketing is the key to reaching a broader audience and enhancing customer engagement.</p>
@@ -129,10 +129,10 @@
 
                         <div class="row mil-mb-30">
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/4.jpg" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog4-sub1.avif" alt="blog" class="mil-post-image">
                             </div>
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/5.jpg" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog4-sub2.avif" alt="blog" class="mil-post-image">
                             </div>
                         </div>
 
@@ -147,7 +147,7 @@
                             <li><a href="#.">Strategy</a></li>
                         </ul>
 
-                        <div class="mil-divider mil-mb-60"></div>
+                        <!-- <div class="mil-divider mil-mb-60"></div> -->
 
                     </div>
 
