--- a/blog5.html
+++ b/blog5.html
@@ -73,8 +73,8 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm-2 mil-deep-bg">
-            <img src="img/blog/5.jpg" class="mil-background-image" style="object-position: center" alt="Publication cover">
+        <div class="mil-banner-sm-2 mil-deep-bg mil-dark-bg">
+            <img src="img/images/blog5.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
             <div class="mil-overlay"></div>
         </div>
         <!-- banner end -->
@@ -87,11 +87,11 @@
 
                         <span class="mil-suptitle mil-accent mil-mb-30">Event Marketing</span>
                         <h3 class="mil-up-font mil-mb-30">Creating Buzz: The Art of Event Promotion</h3>
-                        <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
+                        <!-- <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
                             <li class="mil-post-author"><img src="img/faces/4.jpg" alt="Author"><span>Navin Raj</span></li>
                             <li>12 Feb. 2024</li>
                             <li>12 min read</li>
-                        </ul>
+                        </ul> -->
                         <div class="mil-divider mil-mb-60"></div>
 
                         <p class="mil-mb-30">In the modern marketing landscape, event promotion is more than just spreading the word. It’s about creating an experience even before the event begins. A well-planned promotional strategy ensures maximum attendance, engagement, and a lasting impact on the audience.</p>
@@ -123,10 +123,10 @@
 
                         <div class="row mil-mb-30">
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/event1.jpg" alt="event promotion" class="mil-post-image">
+                                <img src="img/images/blog5-sub1.avif" alt="event promotion" class="mil-post-image">
                             </div>
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/event2.jpg" alt="event marketing" class="mil-post-image">
+                                <img src="img/images/blog5-sub2.avif" alt="event marketing" class="mil-post-image">
                             </div>
                         </div>
 
@@ -147,7 +147,7 @@
                             <li><a href="#.">Advertising</a></li>
                         </ul>
 
-                        <div class="mil-divider mil-mb-60"></div>
+                        <!-- <div class="mil-divider mil-mb-60"></div> -->
 
                     </div>
                     
