--- a/blog6.html
+++ b/blog6.html
@@ -73,8 +73,8 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm-2 mil-deep-bg">
-            <img src="img/blog/5.jpg" class="mil-background-image" style="object-position: center" alt="Publication cover">
+        <div class="mil-banner-sm-2 mil-deep-bg mil-dark-bg">
+            <img src="img/images/blog6.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
             <div class="mil-overlay"></div>
         </div>
         <!-- banner end -->
@@ -87,11 +87,11 @@
 
                         <span class="mil-suptitle mil-accent mil-mb-30">SEO and Content</span>
                         <h3 class="mil-up-font mil-mb-30">SEO and Content: The Ultimate Growth Formula</h3>
-                        <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
+                        <!-- <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
                             <li class="mil-post-author"><img src="img/faces/3.jpg" alt="Author"><span>Marketing Expert</span></li>
                             <li>29 Oct. 2023</li>
                             <li>12 min read</li>
-                        </ul>
+                        </ul> -->
                         <div class="mil-divider mil-mb-60"></div>
 
                         <p class="mil-mb-30">In today’s digital age, businesses need a solid online presence to thrive. The combination of Search Engine Optimization (SEO) and high-quality content is the ultimate formula for growth. Without SEO, your content remains unseen, and without valuable content, SEO efforts are ineffective. Understanding how to integrate these two elements will propel your business towards long-term success.</p>
@@ -133,10 +133,10 @@
 
                         <div class="row mil-mb-30">
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/1.jpg" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog6-sub1.avif" alt="blog" class="mil-post-image">
                             </div>
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/3.jpg" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog6-sub2.avif" alt="blog" class="mil-post-image">
                             </div>
                         </div>
 
@@ -151,7 +151,7 @@
                             <li><a href="#.">Business Growth</a></li>
                         </ul>
 
-                        <div class="mil-divider mil-mb-60"></div>
+                        <!-- <div class="mil-divider mil-mb-60"></div> -->
 
                     </div>
                     
