--- a/project3.html
+++ b/project3.html
@@ -104,7 +104,7 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
@@ -250,7 +250,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/tamilsangu.jpg" alt="Tamilsangu Publication">
+                            <img src="img/images/project3-sub1.avif" alt="Tamilsangu Publication">
                         </div>
 
                     </div>
@@ -291,7 +291,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/tamilsangu-impact.jpg" alt="Tamilsangu Impact">
+                            <img src="img/images/project3-sub2.jpg" alt="Tamilsangu Impact">
                         </div>
 
                     </div>
