--- a/team.html
+++ b/team.html
@@ -97,6 +97,7 @@
                     <div class="mil-menu-btn">
                         <span></span>
                     </div>
+                    
                     <!-- mobile menu button end -->
                 </div>
             </div>
@@ -104,7 +105,7 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
