--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
                         <div class="mil-circle-illustration">
                             <div class="mil-circle-bg"></div>
                             <div class="mil-image-frame">
-                                <img src="img/faces/t3.png" alt="img">
+                                <img src="img/images/aboutus1.png" alt="img">
                             </div>
                         </div>
 
@@ -292,7 +292,7 @@
                         <div class="mil-circle-illustration">
                             <div class="mil-circle-bg"></div>
                             <div class="mil-image-frame">
-                                <img src="img/faces/t2.png" alt="img">
+                                <img src="img/images/aboutus2.png" alt="img">
                             </div>
                         </div>
 
