--- a/blog-sec.html
+++ b/blog-sec.html
@@ -104,7 +104,7 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
@@ -128,7 +128,7 @@
 
                         <a href="blog4.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="img/blog/4.jpg" alt="project">
+                                <img src="img/images/blog4.avif" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
@@ -146,7 +146,7 @@
 
                         <a href="blog5.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="img/blog/5.jpg" alt="project">
+                                <img src="img/images/blog5.avif" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
@@ -164,7 +164,7 @@
 
                         <a href="blog6.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="img/blog/6.jpg" alt="project">
+                                <img src="img/images/blog6.avif" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
