--- a/blog2.html
+++ b/blog2.html
@@ -73,8 +73,8 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm-2 mil-deep-bg">
-            <img src="img/blog/5.jpg" class="mil-background-image" style="object-position: center" alt="Publication cover">
+        <div class="mil-banner-sm-2 mil-deep-bg mil-dark-bg">
+            <img src="img/images/blog2.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
             <div class="mil-overlay"></div>
         </div>
         <!-- banner end -->
@@ -87,11 +87,11 @@
 
                         <span class="mil-suptitle mil-accent mil-mb-30">Social Media Marketing</span>
                         <h3 class="mil-up-font mil-mb-30">Maximizing Engagement with Social Media Strategies</h3>
-                        <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
+                        <!-- <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
                             <li class="mil-post-author"><img src="img/faces/3.jpg" alt="Author"><span>Navin Kumar</span></li>
                             <li>12 Feb. 2024</li>
                             <li>10 min read</li>
-                        </ul>
+                        </ul> -->
                         <div class="mil-divider mil-mb-60"></div>
 
                         <p class="mil-mb-30">Social media is more than just a place to share updates; it is a powerful tool for businesses to engage with their audience, build brand credibility, and drive sales. However, simply posting content is not enough. To maximize engagement, businesses need to implement well-planned strategies tailored to their audience.</p>
@@ -123,10 +123,10 @@
 
                         <div class="row mil-mb-30">
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/1.jpg" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog2-sub1.avif" alt="blog" class="mil-post-image">
                             </div>
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/3.jpg" alt="blog" class="mil-post-image">
+                                <img src="img/images/blog2-sub2.avif" alt="blog" class="mil-post-image">
                             </div>
                         </div>
 
@@ -147,7 +147,7 @@
                             <li><a href="#.">Business Growth</a></li>
                         </ul>
 
-                        <div class="mil-divider mil-mb-60"></div>
+                        <!-- <div class="mil-divider mil-mb-60"></div> -->
 
                     </div>
 
