--- a/blog3.html
+++ b/blog3.html
@@ -73,8 +73,8 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm-2 mil-deep-bg">
-            <img src="img/blog/5.jpg" class="mil-background-image" style="object-position: center" alt="Publication cover">
+        <div class="mil-banner-sm-2 mil-deep-bg mil-dark-bg">
+            <img src="img/images/blog3.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
             <div class="mil-overlay"></div>
         </div>
         <!-- banner end -->
@@ -87,11 +87,11 @@
 
                         <span class="mil-suptitle mil-accent mil-mb-30">Advertising Strategies</span>
                         <h3 class="mil-up-font mil-mb-30">The Power of Outdoor Advertising in Local Markets</h3>
-                        <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
+                        <!-- <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
                             <li class="mil-post-author"><img src="img/faces/3.jpg" alt="Author"><span>Navi Promotions</span></li>
                             <li>24 Feb. 2025</li>
                             <li>12 min read</li>
-                        </ul>
+                        </ul> -->
                         <div class="mil-divider mil-mb-60"></div>
 
                         <p class="mil-mb-30">In today’s digital world, many businesses focus on online advertising, but outdoor advertising remains one of the most effective ways to reach local audiences. Billboards, transit ads, banners, and posters continue to play a significant role in brand visibility and customer engagement. Understanding how to maximize the power of outdoor advertising in local markets can give businesses a competitive edge.</p>
@@ -122,10 +122,10 @@
 
                         <div class="row mil-mb-30">
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/1.jpg" alt="Outdoor Advertising" class="mil-post-image">
+                                <img src="img/images/blog3-sub1.avif" alt="Outdoor Advertising" class="mil-post-image">
                             </div>
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/blog/3.jpg" alt="Billboard Marketing" class="mil-post-image">
+                                <img src="img/images/blog3-sub2.avif" alt="Billboard Marketing" class="mil-post-image">
                             </div>
                         </div>
 
@@ -151,7 +151,7 @@
                             <li><a href="#.">Branding</a></li>
                         </ul>
 
-                        <div class="mil-divider mil-mb-60"></div>
+                        <!-- <div class="mil-divider mil-mb-60"></div> -->
 
                     </div>
 
