--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="swiper-container mil-banner-slideshow">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="img/images/home1.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="img/images/home1.avif" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                     <div class="swiper-slide">
                         <img src="img/images/home2.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
