--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
@@ -127,7 +127,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/2.jpg" alt="Project">
+                            <img src="img/images/project1.jpg" alt="Project">
                         </div>
 
                     </div>
@@ -146,7 +146,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover mil-type-2">
-                            <img src="img/projects/3.jpg" alt="Project">
+                            <img src="img/images/project2.avif" alt="Project">
                         </div>
 
                     </div>
@@ -165,7 +165,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/1.jpg" alt="Project">
+                            <img src="img/images/project3.avif" alt="Project">
                         </div>
 
                     </div>
