--- a/project1.html
+++ b/project1.html
@@ -104,7 +104,7 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
@@ -243,7 +243,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/2.jpg" alt="Project">
+                            <img src="img/images/project1-sub1.avif" alt="Project">
                         </div>
 
                     </div>
@@ -284,7 +284,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/2.jpg" alt="Project">
+                            <img src="img/images/project1-sub2.jpg" alt="Project">
                         </div>
 
                     </div>
