--- a/project2.html
+++ b/project2.html
@@ -104,7 +104,7 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
@@ -244,7 +244,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/xenex.jpg" alt="Xenex Fiberglass Engineering">
+                            <img src="img/images/project2-sub1.avif" alt="Xenex Fiberglass Engineering">
                         </div>
 
                     </div>
@@ -285,7 +285,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/xenex-impact.jpg" alt="Xenex Impact">
+                            <img src="img/images/project2-sub2.avif" alt="Xenex Impact">
                         </div>
 
                     </div>
