--- a/team-single.html
+++ b/team-single.html
@@ -104,7 +104,7 @@
         <!-- top bar end -->
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-banner-content">
                 <div class="container mil-relative">
